hydra/reference-grant.yaml
# Allow SecurityPolicy in default namespace to reference hydra-public Service for JWKS
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-securitypolicy-jwks
  namespace: hydra
spec:
  from:
  - group: gateway.envoyproxy.io
    kind: SecurityPolicy
    namespace: default
  to:
  - group: ""
    kind: Service
    name: hydra-public
