hydra/hydra-service.yaml
# Ory Hydra services (public and admin)
apiVersion: v1
kind: Service
metadata:
  name: hydra-public
  namespace: hydra
  labels:
    app: hydra
spec:
  type: NodePort
  selector:
    app: hydra
  ports:
    - name: public
      port: 4444
      targetPort: 4444
      nodePort: 30444  # For external access in kind
---
apiVersion: v1
kind: Service
metadata:
  name: hydra-admin
  namespace: hydra
  labels:
    app: hydra
  annotations:
    description: "Internal only - do not expose externally"
spec:
  type: ClusterIP
  selector:
    app: hydra
  ports:
    - name: admin
      port: 4445
      targetPort: 4445
