hydra/hydra-sidecar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hydra-sidecar
  namespace: hydra
  labels:
    app.kubernetes.io/name: hydra-sidecar
    app.kubernetes.io/component: sidecar
spec:
  selector:
    app.kubernetes.io/name: hydra
  ports:
    - port: 8080
      targetPort: 8080
      name: http
      protocol: TCP
  type: ClusterIP
